# weirdproblem

./: CMakeLists.txt  magnetic_field_map.cpp
